--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fileforge/react-print": "^0.1.139",
+    "@onedoc/client": "^0.1.33",
+    "@onedoc/react-print": "^0.1.133",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-dropdown-menu": "^2.0.6",
     "@radix-ui/react-icons": "^1.3.0",
